# korpha

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BRIEF.md  CLAUDE.md  Dockerfile  LICENSE  NEXT_STEPS.md  NOTICES  PROGRESS.md  README.md  TEST_SCENARIO_MARKETRO.md  alembic.ini  docker-compose.yml  install.sh  mcp.yaml.example  providers.yaml.example  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2f8b6e4a3d51_cooperation.py  4c1e8a2d9b07_external_service_account.py  5e5fbd2bc561_add_wakeup_and_routine_tables.py  6bd605409bea_add_repo_table.py  76d735c62c97_founder_active_business_id.py  7d3f9c4e1820_shared_resource.py  8e2a5f9c1064_memory_namespace.py  9a2f1b7c8e30_business_unit_id_fks.py  a1c9d4f2e6b8_business_autonomy.py  c4f8a3e1b9d2_routine_tier_provider_override.py  e15960c6e32e_business_founder_brief.py  e3ef525a92e1_task_ref_number.py  f6cbb2ea04eb_add_message_summary_table.py  (+2 more)
docs/: API_REFERENCE.md  APPROVALS.md  BACKUP.md  CHANNELS.md  CLI_REFERENCE.md  CODEX_DELEGATION.md  COFOUNDER_PROTOCOL.md  COMPARE.md  COSTS.md  MCP.md  MEMORY.md  MULTI_SESSION_RECOVERY.md  ORG_MODEL.md  PRODUCT_LIFECYCLE.md  PROMPT_AUDIT.md  PROVIDERS.md  RANKMYANSWER_INTEGRATION.md  README.md  ROUTINES.md  SKILLS.md  SMOKE_TEST_SKILLS.md  THEMES.md  THEME_CONTEST.md  THEME_PROTOCOL.md  TROUBLESHOOTING.md  hermes-kanban-audit.md
korpha/: _jsonext.py  cli.py  cli_config.py  cli_setup.py  config.py  updater.py
scripts/: demo.py  install.cmd  install.ps1  install.sh  smoke_postgres.py
tests/: conftest.py  test_agent_browser_cli.py  test_api.py  test_approval_reviewer_routing.py  test_approvals.py  test_audit_retention.py  test_auto_schema.py  test_auxiliary_config.py  test_background_tasks.py  test_backup.py  test_backup_offdisk.py  test_blockers.py  test_browser.py  test_browser_action.py  test_browser_pool.py  test_browser_supervisor.py  test_budget_per_unit.py  test_budgets.py  test_business_unit_filesystem.py  test_business_unit_fk_backfill.py  test_business_units_migration.py  test_business_units_models.py  test_calendar_skill.py  test_ceo.py  test_ceo_kanban_mirror.py  test_channel_registry.py  test_channel_send.py  test_channels.py  test_checkpoints.py  test_checkpoints_migrate.py  test_checkpoints_v2.py  test_clarify.py  test_claude_code_provider.py  test_cli_config.py  test_cli_disk.py  test_cli_kanban.py  test_cli_liveness.py  test_cli_setup.py  test_cli_team_review_cron.py  test_code_deploy_skill.py  (+144 more)
tools/: seed_firstparty_hub.py
(+466 files in other folders)
