[project]
name = "korpha"
version = "0.0.1"
description = "Your AI cofounder for the online business you keep saying you'll start."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Korpha" }]
keywords = ["ai", "agent", "cofounder", "solopreneur", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.15",
    "structlog>=24.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "anyio>=4.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.27",
    "playwright>=1.40",
    "psycopg>=3.3.4",
    "textual>=8.2.5",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-passlib",
    "types-PyYAML",
]

[project.scripts]
korpha = "korpha.cli:main"

[project.urls]
Homepage = "https://github.com/korpha/korpha"
Repository = "https://github.com/korpha/korpha"
Issues = "https://github.com/korpha/korpha/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["korpha"]

[tool.uv.sources]
hermes-agent = { path = "./hermes" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: hits external services. Requires API keys. Skipped when keys absent.",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["korpha"]
exclude = ["hermes/", "tests/"]

[[tool.mypy.overrides]]
module = ["sqlmodel.*"]
ignore_missing_imports = true
